--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
     <title>BharatPe Clone</title>
     <link rel="icon" type="image/x-icon" href="images/favbharatpe.png">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:wght@300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -36,7 +41,7 @@
                                 
                                     <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
                                
-                                    <li class="nav-item"><a href="" class="nav-link">Login</a></li>
+                                    <div id="nav-item-login"><li class="nav-item"><a href="" class="nav-link">Login</a></li></div>
                                 </ul>
                                 </div>
                             </div>
@@ -47,7 +52,50 @@
             </div>
         </section>
     </div>
-
+<section>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Magnam ut ad maxime provident delectus quas cumque, nobis a
+         ut suscipit, quibusdam laborum neque tenetur v
+        oluptas beatae, aperiam possimus. Quisquam, cum voluptas.
+    </p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing
+         elit. Ipsum vitae labore possimus impedit aut at, debitis vel fugit invento
+         re provident sed! Ducimus facere ipsum maiores laborum distinctio labore sequi at is
+         te voluptates odio, repellat beatae, enim, provident architecto doloremque nesciunt 
+         pariatur maxime dolor voluptatum dolorum unde. Doloremque repellat excepturi minus p
+         rovident quia blanditiis qui mollitia deserunt illum omnis totam fuga animi ipsam fu
+         <br><br><br><br><br><br><br><br><br><br>
+         git aspernatur eveniet, laborum, quis sed accusantium, non rerum! Iste eos eius exer
+         citationem facere illo nesciunt distinctio obcaecati quae quibusdam, earum est saepe
+          corporis, accusamus soluta dignissimos unde iure, maxime ut sequi rerum modi repell
+          at? Maiores optio blanditiis reprehenderit officia quod ipsa cum perspiciatis quasi
+           molestias culpa sapiente odio amet ratione, dolorum praesentium error doloribus ul
+           lam laborum numquam sint fugiat nisi sit facere tenetur. Sunt libero ipsam exercit
+           ationem officiis assumenda, eius laboriosam culpa ab impedit harum tempora, explica
+           bo error earum! Ad reiciendis voluptate at laboriosam ex illum consequatur aut aliq
+           uam sit ratione commodi quia, ea obcaecati quod numquam delectus eos omnis iusto ni
+           si dolores ut praesentium molestiae. Beatae facere, nobis sunt sit cum eos minima e
+           ligendi rerum repellendus odio. Cupiditate provident cum non est ea in. Debitis dig
+           nissimos tempore neque laborum harum inventore tempora reiciendis, exercitationem r
+           ecusandae eius animi delectus corrupti at dolorem non ullam aliquid ab quasi odit q
+           <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+           uisquam cum quo. Nisi quisquam aut ipsa perferendis excepturi, neque veritatis accu
+           santium tenetur alias, ipsam cum nesciunt quasi nam tempora eum sequi vero a ullam,
+            porro labore accusamus dolorum voluptates nulla? Dolor saepe veniam labore dolorum
+             vel? Voluptate, enim eius, perferendis nesciunt facilis molestiae, deleniti cupid
+             itate in reprehenderit earum cum rem tempora facere? Ut enim laborum exercitation
+             em rerum est eum nulla at vel. Nulla, vel! Saepe impedit debitis error culpa vero
+              ab qui eligendi ea laboriosam asperiores ullam, praesentium nemo consectetur cor
+              poris tenetur. Aliquam, obcaecati? Animi deserunt optio ratione dolorem possimus
+              , dolores odit sed minus nobis perspiciatis. Nostrum dicta culpa ab quasi fugit 
+              quibusdam rem facere velit in, quae atque ex esse doloremque cupiditate! Atque m
+              inus repudiandae quaerat soluta! Exercitationem tempore rerum, harum sapiente pe
+              rferendis repellat quis, blanditiis architecto earum illo in minima magni ad incidunt assumenda cupiditate repudiandae. Accusantium, ad. Facere a libero nesciunt quis quaerat obcaecati vero! Atque molestias nesciunt nulla, porro repudiandae aliquam tenetur ad perferendis iusto? Itaque voluptates laboriosam eaque adipisci nesciunt, voluptate praesentium velit ullam ad eius maiores sapiente, quisquam cumque voluptatum totam iusto sed dolorem commodi iure quos natus non! Consectetur adipisci deserunt ea reiciendis aut nihil ipsa, eum blanditiis, praesentium, cumque beatae! Voluptatem voluptatum labore accusamus soluta, iusto veritatis at atque, ipsum rem sapiente porro illum totam alias nobis sit itaque eius animi. Labore sequi et est incidunt pariatur minus cupiditate dolore blanditiis, illo veritatis perspiciatis iste accusamus optio reprehenderit, sapiente rerum aspernatur aliquam eveniet. Laudantium quibusdam officiis aliquid eligendi. Et fuga ipsa nisi neque iste molestiae, officia dignissimos, magni non consequuntur, recusandae quidem. Velit fuga totam delectus corporis tempora, sint, vitae ipsam saepe mollitia pariatur facere consequuntur, provident perferendis! Similique,
+         placeat? Quia, et est ipsa modi perferendis sed quos assumenda aliquam?
+    </p>
+</section>
 
 
 
